added new html pages

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Multi Hosting</title>
+
+    <title>Document</title>
   </head>
-  <body>
-    <h1>HOME PAGE!!!</h1>
-    <h4>WELCOME</h4>
-    <a href="/about.html">ABOUT ME</a>
-  </body>
+  <body></body>
 </html>
