added pic and page links

--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,9 @@
 
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>THIS IS THE CONTACT PAGE!!!! You can contact me @Siphesihle.co.za</p>
+    <a href="/">BAck home</a>
+    <a href="/photo.html">PHOTO PAGE</a>
+  </body>
 </html>
