--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>HOME PAGE!!!</h1>
     <h4>WELCOME</h4>
-    <a href="/about.html">ABOUT ME</a>
+    <p>This is the home page!!!</p>
+
+    <a href="/photo.html">PHOTO PAGE</a>
+    <a href="/contact.html">CONTACT PAGE</a>
   </body>
 </html>
