--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,12 @@
     <title>About page</title>
   </head>
   <body>
-    <h1>THis is the about page</h1>
+    <h1>THis is the photo page</h1>
+
+    <img src="https://i.ebayimg.com/images/g/lGIAAOSwE~xgbuyS/s-l1600.webp" />
+    <br />
+
     <a href="/">BAck home</a>
+    <a href="/contact.html">CONTACT PAGE</a>
   </body>
 </html>
