--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Search Engine Optimization" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Multi Hosting</title>
+    <title>SEO Croissant application</title>
   </head>
   <body>
-    <h1>HOME PAGE!!!</h1>
+    <h1>Search Engine Optimization</h1>
     <h4>WELCOME</h4>
     <p>This is the home page!!!</p>
 
