--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,10 @@
   <body>
     <h1>THis is the photo page</h1>
 
-    <img src="https://i.ebayimg.com/images/g/lGIAAOSwE~xgbuyS/s-l1600.webp" />
+    <img
+      src="https://i.ebayimg.com/images/g/lGIAAOSwE~xgbuyS/s-l1600.webp"
+      alt="Puppy Dog"
+    />
     <br />
 
     <a href="/">BAck home</a>
